force-app/main/default/objects/Reservation__c/fields/Actual_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Actual_Check_In__c</fullName>
    <label>Actual Check-In</label>
    <type>DateTime</type>
</CustomField>