force-app/main/default/objects/Reservation__c/fields/Actual_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Actual_Check_Out__c</fullName>
    <label>Actual Check-Out</label>
    <type>DateTime</type>
</CustomField>