force-app/main/default/objects/Reservation__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName><label>Adults</label>
    <type>Number</type><precision>2</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>