force-app/main/default/objects/Reservation__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Direct Booking</fullName><default>true</default><label>Direct Booking</label></value>
            <value><fullName>Booking.com</fullName><default>false</default><label>Booking.com</label></value>
            <value><fullName>Expedia</fullName><default>false</default><label>Expedia</label></value>
            <value><fullName>Airbnb</fullName><default>false</default><label>Airbnb</label></value>
            <value><fullName>Walk-In</fullName><default>false</default><label>Walk-In</label></value>
            <value><fullName>Corporate</fullName><default>false</default><label>Corporate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>