force-app/main/default/objects/Reservation__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName><label>Check-Out Date</label>
    <type>Date</type><required>true</required>
</CustomField>