force-app/main/default/objects/Reservation__c/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName><label>Children</label>
    <type>Number</type><precision>2</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>