force-app/main/default/objects/Reservation__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName><label>Confirmation Number</label>
    <type>Text</type><length>50</length>
<unique>true</unique><externalId>true</externalId>
</CustomField>