force-app/main/default/objects/Reservation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName><label>Guest Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>