force-app/main/default/objects/Reservation__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName><label>Guest Email</label>
    <type>Email</type><required>false</required><unique>false</unique><externalId>false</externalId>
</CustomField>