force-app/main/default/objects/Reservation__c/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName><label>Guest First Name</label>
    <type>Text</type><length>100</length>
<unique>false</unique><externalId>false</externalId>
</CustomField>