force-app/main/default/objects/Reservation__c/fields/Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone__c</fullName><label>Guest Phone</label>
    <type>Phone</type><required>false</required>
</CustomField>