force-app/main/default/objects/Reservation__c/fields/Nights__c.field-meta.xml
<CustomField>
    <fullName>Nights__c</fullName><label>Nights</label>
    <type>Number</type><precision>4</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>