force-app/main/default/objects/Reservation__c/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <label>Rate Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>BAR Weekend</fullName><default>false</default><label>BAR Weekend</label></value>
            <value><fullName>All Inclusive</fullName><default>false</default><label>All Inclusive</label></value>
            <value><fullName>Bed &amp; Breakfast</fullName><default>false</default><label>Bed &amp; Breakfast</label></value>
            <value><fullName>Room Only</fullName><default>false</default><label>Room Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>