force-app/main/default/objects/Reservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName><label>Room</label>
    <type>Lookup</type>
    <referenceTo>Hotel_Room__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>