force-app/main/default/objects/Reservation__c/fields/Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Room_Rate__c</fullName><label>Room Rate</label>
    <type>Currency</type><precision>8</precision><scale>2</scale>
</CustomField>