force-app/main/default/objects/Reservation__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName><label>Special Requests</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines>
</CustomField>