force-app/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Confirmed</fullName><default>true</default><label>Confirmed</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>No Show</fullName><default>false</default><label>No Show</label></value>
            <value><fullName>Checked In</fullName><default>false</default><label>Checked In</label></value>
            <value><fullName>Checked Out</fullName><default>false</default><label>Checked Out</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>