force-app/main/default/objects/Reservation__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName><label>Subtotal</label>
    <type>Currency</type><precision>10</precision><scale>2</scale>
</CustomField>