force-app/main/default/objects/Reservation__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName><label>Taxes</label>
    <type>Currency</type><precision>10</precision><scale>2</scale>
</CustomField>