force-app/main/default/objects/Reservation__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName><label>Total</label>
    <type>Currency</type><precision>10</precision><scale>2</scale>
</CustomField>